refactor: move to lerna

--- a/packages/webrtc-api-interceptor/package.json
+++ b/packages/webrtc-api-interceptor/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "devDependencies": {},
   "scripts": {
-    "build": ""
+    "build": "",
+    "lint": "eslint --fix ./lib/"
   }
 }
