--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nrwl/nx-cloud": "latest",
-    "nx": "15.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "eslint": "^8.35.0",
+    "lerna": "^6.5.1",
     "prettier": "^2.6.2"
   },
   "workspaces": [
